--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -74,6 +74,8 @@
 \renewcommand\qedsymbol{\includegraphics[width=1.5cm]{occhiali}}
 %\renewcommand\qedsymbol{$\square$\itshape QED}
 
+% alias for differentials
+\newcommand*\de{\mathop{}\!\mathrm{d}}
 
 % useful aliases for common employed declarations
 \def \beq {\begin{equation}}
@@ -193,3 +195,8 @@
 % \appendix
 % \input{appendici.tex}
 \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
