Sistemata formula arcotangente

--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -301,7 +301,7 @@ Andiamo ad analizzare ora i diversi tipi di mezzi al variare di $\epsilon_c$.
 	Sia $\J_{COND} = \sigma \E$ è invece la densità di corrente di conduzione e $\J_{SPOST}$ la densità di corrente di spostamento.
 	Definiamo quindi l'angolo di perdita come
 	\begin{equation}
-		\delta = \arctg-\frac{\Im(\epsilon_c)}{\Re(\epsilon_c)} = \arctg\frac{\sigma}{\omega \epsilon}
+		\delta = \arctan \left(\frac{\Im(\epsilon_c)}{\Re(\epsilon_c)}\right) = \arctan\left(\frac{\sigma}{\omega \epsilon}\right)
 		\end{equation}
 \end{definition}
 
