--- a/antenne/polarizzazione.tex
+++ b/antenne/polarizzazione.tex
@@ -3,124 +3,134 @@ Andremo ora ad analizzare come si comporta il campo elettromagnetico nello spazi
 
 Iniziamo con un'analisi nel dominio del tempo del campo, prestando attenzione alla differenza con il corso di Fisica 2: mentre nell'altro corso si è osservata la polarizzazione del mezzo, ora analizzeremo la polarizzazione dell'onda elettromagnetica.
 \begin{esp}
-  \ert &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos\left[\omega t + \phi_{E_n}(\r)\right] \\
-  &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos(\omega t)\cdot cos\left[ \phi_{E_n}(\r)\right] - sin(\omega t)\cdot sin\left[ \phi_{E_n}(\r)\right]\\
-  &=cos(\omega t) \cdot \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos \left[ \phi_{E_n}(\r) \right] \\
-  &+sin(\omega t) \cdot \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot sin \left[ \phi_{E_n}(\r) \right] \\
+	\ert = & \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot \cos\left[\omega t + \phi_{E_n}(\r)\right] \\
+	= & \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot \cos(\omega t)\cdot \cos\left[ \phi_{E_n}(\r)\right] - sin(\omega t)\cdot sin\left[ \phi_{E_n}(\r)\right]\\
+	= & \cos(\omega t) \cdot \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot \cos \left[ \phi_{E_n}(\r) \right] \\
+	&+\sin(\omega t) \cdot \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot \sin \left[ \phi_{E_n}(\r) \right] \\
 \end{esp}
 
 Raggruppando i termini, si ha in conclusione che
 \begin{equation} \label{eq:ert}
-	\ert = \E^R(\r)\cdot cos(\omega t) - \E^I(\r)\cdot sin(\omega t)
+	\ert = \E^R(\r)\cdot \cos(\omega t) - \E^I(\r)\cdot sin(\omega t)
 \end{equation}
 
 \newpage
 con il vettore di Steinmetz del campo elettrico scomposto in parte reale e immaginaria
 \begin{equation*} \begin{dcases}
-	\E^R(\r) &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos \left[ \phi_{E_n}(\r) \right] \\
+	\E^R(\r) &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot \cos \left[ \phi_{E_n}(\r) \right] \\
 	\E^I(\r) &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot sin \left[ \phi_{E_n}(\r) \right]
 \end{dcases} \end{equation*}
 
-Possiamo osservare il vettore di Steinmetz si può ottenere direttamente dalla formula del campo
+Possiamo osservare il vettore di Steinmetz si può ottenere direttamente dalla formula del campo.
 \begin{equation*} \begin{dcases}
 	\e(\r, t=0) = \E^R(\r) \\
-	\e \left( \r, t = \frac{pi}{2\omega} \right) = -\E^I(\r)
+	\e \left( \r, t = \frac{\pi}{2\omega} \right) = -\E^I(\r)
 \end{dcases} \end{equation*}
 
 \paragraph{Proprietà di polarizzazione del campo}
-A partire dall'equazione \ref{eq:ert} possiamo osservare alcune simmetrie del campo $\E$:
+A partire dall'equazione \ref{eq:ert} possiamo osservare alcune simmetrie del campo $\E$.
 \begin{enumerate}
-  \item il campo elettromagnetico giace sempre su un piano di polarizzazione, qualunque $t$ si scelga
-  \item il campo elettromagnetico traccia una curva chiusa
-  \item la curva chiusa è, in generale, un ellisse
+	\item il campo elettromagnetico giace sempre su un piano di polarizzazione, qualunque $t$ si scelga, determinato da $\E^I(\r)$ e $\E^R(\r)$
+	\item il campo elettromagnetico traccia una curva chiusa
+	\item la curva chiusa è, in generale, un ellisse
 \end{enumerate}
 
-Queste affermazioni possono essere provate come segue
+Queste affermazioni possono essere provate come segue, scomponendo il campo $\vec{E}$ lungo due versori arbitrari $\hat{x}^\prime$ e $\hat{y}^\prime$ del piano di polarizzazione.
+\begin{esp*}
+	& \begin{dcases}
+		\E^R = E^R_{x^{\prime}} \cdot \hat{x}^{\prime}+E^R_{y^{\prime}} \cdot \hat{y}\prime \\
+		\E^I = E^I_{x^{\prime}} \cdot \hat{x}^{\prime}+E^I_{y^{\prime}} \cdot \hat{y}\prime \\
+	\end{dcases}
+\end{esp*}
+
+\begin{esp*}
+	\e &= (E^R_{x^{\prime}}\cdot \hat{x}^{\prime}+ E^R_{y^{\prime}})\cdot \cos(\omega t) - (E^I_{x^{\prime}}\cdot \hat{x}^{\prime}+ E^I_{y^{\prime}})\cdot sin(\omega t)\\
+	&= \left[E^R_{x^{\prime}} \cdot \cos(\omega t)-E^I_{x^{\prime}}\cdot sin(\omega t)\right]\cdot \hat{x}^{\prime} + \left[E^R_{y^{\prime}} \cdot \cos(\omega t) -E^I_{y^{\prime}}\cdot sin(\omega t)\right]\cdot \hat{y}\prime \\
+\end{esp*}
+	o in forma matriciale
 \begin{esp}
-  \E^R &= E^R_{x^{\prime}} \cdot \hat{x}^{\prime}+E^R_{y^{\prime}} \cdot \hat{y}\prime \\
-  \E^I &= E^I_{x^{\prime}} \cdot \hat{x}^{\prime}+E^I_{y^{\prime}} \cdot \hat{y}\prime \\
-  \e &= (E^R_{x^{\prime}}\cdot \hat{x}^{\prime}+ E^R_{y^{\prime}})\cdot cos(\omega t) - (E^I_{x^{\prime}}\cdot \hat{x}^{\prime}+ E^I_{y^{\prime}})\cdot sin(\omega t)\\
-  &= \left[E^R_{x^{\prime}} \cdot cos(\omega t)-E^I_{x^{\prime}}\cdot sin(\omega t)\right]\cdot \hat{x}^{\prime} + \left[E^R_{y^{\prime}} \cdot cos(\omega t) -E^I_{y^{\prime}}\cdot sin(\omega t)\right]\cdot \hat{y}\prime \\
-\end{esp}
-  o in forma matriciale
-\begin{esp}
-  \begin{pmatrix}
-    e_{x^{\prime}} \\ e_{y^{\prime}}
-  \end{pmatrix}
-  &=
-  \underbrace{\begin{pmatrix}
-    E_{x^{\prime}}^R & -E_{x^{\prime}}^I\\
-    E_{y^{\prime}}^R & -E_{y^{\prime}}^I
-  \end{pmatrix}}_{\text{Deformazione lineare}}
-  \cdot
-  \underbrace{\begin{pmatrix}
-    cos(\omega t) \\ sin(\omega t)
-  \end{pmatrix}}_{\text{circonferenza}}
+	\begin{pmatrix}
+		e_{x^{\prime}} \\ e_{y^{\prime}}
+	\end{pmatrix}
+	&=
+	\underbrace{\begin{pmatrix}
+		E_{x^{\prime}}^R & -E_{x^{\prime}}^I\\
+		E_{y^{\prime}}^R & -E_{y^{\prime}}^I
+	\end{pmatrix}}_{\text{Deformazione lineare}}
+	\cdot
+	\underbrace{\begin{pmatrix}
+		\cos(\omega t) \\ sin(\omega t)
+	\end{pmatrix}}_{\text{circonferenza}}
 \end{esp}
 
 Passando quindi alle coordinate cartesiane principali, si ottiene
 \begin{esp}
 \begin{pmatrix} e_{x} \\ e_{y} \end{pmatrix}
 &= \begin{pmatrix}
-  a \cdot cos(\omega t + \Phi) \\
-  \pm b \cdot sin(\omega t + \Phi)
+	a \cdot \cos(\omega t + \Phi) \\
+	\pm b \cdot sin(\omega t + \Phi)
 \end{pmatrix}
 \end{esp}
 dove $a,b \in \R^+$ indicano il valore dei semiassi dell'ellisse, mentre il $\pm$ indica il verso \emph{destrorso} o \emph{sinistrorso} della polarizzazione ellittica del campo elettrico. Ci sono ora due casi degeneri principali:
 \begin{enumerate}
-  \item $a = b$ l'ellisse degenera in una circonferenza, per cui la polarizzazione sarà circolare destrorsa o sinistrorsa
-  \item $\begin{cases}a=0 \\ b \neq 0 \end{cases} \vee  \begin{cases}a\neq 0 \\ b = 0 \end{cases}$ l'ellisse degenera in un segmento e la polarizzazione sarà rettilinea verticale o orizzontale.
+	\item $a = b$ l'ellisse degenera in una circonferenza, per cui la polarizzazione sarà circolare destrorsa o sinistrorsa;
+	\item $\begin{cases}a=0 \\ b \neq 0 \end{cases} \vee \quad \begin{cases} a\neq 0 \\ b = 0 \end{cases}$ l'ellisse degenera in un segmento e la polarizzazione sarà rettilinea verticale o orizzontale.
 \end{enumerate}
 
-Queste proprietà si posso ricavare anche con i vettori di Steinmetz
+Queste proprietà si posso ricavare anche con i vettori di Steinmetz.
 \begin{esp}
-  \e(t) &= \Re[\E\cdot e^{\jmath \omega t}] \quad \E \in \C^3 \\
-  &=\Re\left[\left(\E^R + \jmath \E^I\right)\cdot\left(\cos(\omega t) + \jmath \sin(\omega t)\right)\right] \\
-	&= \E^R \cdot cos(\omega t) - \E^I\cdot sin(\omega t) \\
-  &= a \cdot cos(\omega t + \Phi)\cdot \hat{x} \pm b \cdot sin(\omega t + \Phi)\cdot \hat{y}
+	\e(t) &= \Re[\E\cdot e^{\jmath \omega t}] \quad \text{where } \E \in \C^3 \\
+	&=\Re\left[\left(\E^R + \jmath \E^I\right)\cdot\left(\cos(\omega t) + \jmath \sin(\omega t)\right)\right] \\
+	&= \E^R \cdot \cos(\omega t) - \E^I\cdot sin(\omega t) \\
+	&= a \cdot \cos(\omega t + \Phi)\cdot \hat{x} \pm b \cdot sin(\omega t + \Phi)\cdot \hat{y}
 \end{esp}
 
 Ruotando il sistema di riferimento di un angolo $\delta$ la proprità resta valida: è sufficiente applicare la corrispodente trasformazione ai campi considerati.
 \begin{equation}
-  \begin{pmatrix} E_{x^{\prime}} \\ E_{y^{\prime}} \end{pmatrix} =
-  \begin{pmatrix}
-     cos(\delta) & sin(\delta) \\ -sin(\delta) & cos(\delta)
-  \end{pmatrix} \cdot
-    \begin{pmatrix} E_{x} \\ E_{y} \end{pmatrix}
+	\begin{pmatrix} E_{x^{\prime}} \\ E_{y^{\prime}} \end{pmatrix} =
+	\begin{pmatrix}
+		 \cos(\delta) & sin(\delta) \\ -sin(\delta) & \cos(\delta)
+	\end{pmatrix} \cdot
+		\begin{pmatrix} E_{x} \\ E_{y} \end{pmatrix}
 \end{equation}
 
 \section{Rapporto di polarizzazione rettilinea}
 Definiamo il rapporto di polarizzazione $p$ nel sistema di assi principali come
 \begin{equation}
-  p = \jmath \frac{E_y}{E_x} \in \C
+	p = \jmath \frac{E_y}{E_x} \in \C
 \end{equation}
 mentre in un sistema di assi generico, si ottiene, in modo analogo alle linee di trasmissione,
 \begin{equation}
-  p\prime = \jmath \frac{E_y}{E_x} = \frac{p - \jmath tg(\delta)}{1-\jmath p \cdot tg(\delta)}
+	p^\prime = \jmath \frac{E_y}{E_x} = \frac{p - \jmath tg(\delta)}{1-\jmath p \cdot tg(\delta)}
 \end{equation}
-Risulta interessante notare come, per qualsiasi angolo $\delta$ il segno di $p\prime$ non cambi. $p\prime \in \C$ discrimina infatti, indipendentemente dal sistema di referimento, i diversi tipi di polarizzazione
+Risulta interessante notare come, per qualsiasi angolo $\delta$ il segno della parte reale di $p^\prime$ non cambi. $p^\prime \in \C$ discrimina infatti, indipendentemente dal sistema di referimento, i diversi tipi di polarizzazione
 \begin{equation}\begin{cases}
-  \Re[p\prime] >0 & \text{ellittica destrorsa} \\
-  \Re[p\prime] <0 & \text{ellittica sinistrorsa} \\
-  \Re[p\prime] =0 & \text{rettilinea ``orizzontale''} \\
-  \Re[p\prime] =\infty & \text{rettilinea ``verticale''} \\
-  p = p\prime = 1 & \text{circolare destrorsa} \\
-  p = p\prime = 1 & \text{circolare sinistrors}
+	\Re[p^\prime] >0 & \text{ellittica destrorsa} \\
+	\Re[p^\prime] <0 & \text{ellittica sinistrorsa} \\
+	\Re[p^\prime] =0 & \text{rettilinea ``orizzontale''} \\
+	\Re[p^\prime] =\infty & \text{rettilinea ``verticale''} \\
+	p = p^\prime = 1 & \text{circolare destrorsa} \\
+	p = p^\prime = 1 & \text{circolare sinistrorsa}
 \end{cases}\end{equation}
 
 % \textbf{\textsc{Nota Bene}} la polarizzazione circolare prevede che $p=p\prime$ sia \textbf{puramente reale} e pari a $\pm1$
 
-Cerchiamo ora di valutare $\Re [p\prime]$
+$\Re [p\prime]$ si può calcolare come
 \begin{esp*}
-  p\prime
+	p^\prime
 	&= \jmath \frac{E_{y^{\prime}}}{E_{x^{\prime}}} \\
 	& = e^{\jmath \frac{\pi}{2}} \cdot \left \| \frac{E_{y^{\prime}}}{E_{x^{\prime}}} \right \|
-  \cdot e^{j(\Phi_{y^{\prime}}-\Phi_{x^{\prime}})} \\
-  &= \left \| \frac{E_{y^{\prime}}}{E_{x^{\prime}}} \right \| \cdot e^{j(\frac{\pi}{2}+\Phi_{y^{\prime}}-\Phi_{x^{\prime}})}
+	\cdot e^{j(\Phi_{y^{\prime}}-\Phi_{x^{\prime}})} \\
+	&= \left \| \frac{E_{y^{\prime}}}{E_{x^{\prime}}} \right \| \cdot e^{j(\frac{\pi}{2}+\Phi_{y^{\prime}}-\Phi_{x^{\prime}})}
 \end{esp*}
 
 e dunque,
 \begin{esp*}
-	\Re[p\prime]
+	\Re[p^\prime]
 	&= \left \| \frac{E_{y^{\prime}}}{E_{x^{\prime}}} \right \| \cdot \underbrace{\cos \left( \frac{\pi}{2} +\Phi_{y^{\prime}}-\Phi_{x^{\prime}} \right)}_{\text{verso di polarizzazione}}
 \end{esp*}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "antenne"
+%%% End:
